RESOLVED FIXED21763
REGRESSION (r36108-r36113): Can't load picture content on wired.com galleries
https://bugs.webkit.org/show_bug.cgi?id=21763
Summary REGRESSION (r36108-r36113): Can't load picture content on wired.com galleries
Antti Koivisto
Reported 2008-10-20 17:43:32 PDT
<rdar://problem/6285025> REGRESSION (r36108-r36113): Can't load picture content on wired.com * SUMMARY Can't load picture content on wired.com * STEPS TO REPRODUCE 1. Go to http://www.wired.com/gadgets/gadgetreviews/multimedia/2008/10/gallery_bikestuff 2. Click on one of the images in the bottom right corner * RESULT Appropriate text loads but no images. Wired frequently runs this type of article and I've seen this issue before.
Attachments
patch (1.36 KB, patch)
2008-10-20 17:54 PDT, Antti Koivisto
adele: review+
Antti Koivisto
Comment 1 2008-10-20 17:54:34 PDT
Antti Koivisto
Comment 2 2008-10-20 18:23:11 PDT
Sending WebCore/ChangeLog Sending WebCore/loader/loader.cpp Transmitting file data .. Committed revision 37753.
Note You need to log in before you can comment on or make changes to this bug.