third_party/WebKit/WebCore/loader/loader.cpp
@@ -384,6 +384,10 @@ void Loader::Host::didReceiveResponse(SubresourceLoader* loader, const ResourceR
 
             // Existing resource is ok, just use it updating the expiration time.
             cache()->revalidationSucceeded(resource, response);
+            
+            if (request->docLoader()->frame())
+                request->docLoader()->frame()->loader()->checkCompleted();
+
             delete request;
 
             servePendingRequests();
